# platopod

./: .gitignore  CLAUDE.md  LICENSE  README.md
config/: cot_config.yaml
config/exercises/: adfa-terrain-patrol.yaml  capture-the-flag.yaml  cbrn-recon-patrol.yaml  cordon-and-search.yaml  defensive-position.yaml  dowsett-field-ctf.yaml  gas-plume-search.yaml  joint-coordination.yaml
docker/: Dockerfile  README.md  docker-compose.yaml  setup_wifi_ap.sh
docs/: ARCHITECTURE.md  lab-session-guide.md  message-catalog.md  scenario-authoring.md  setup-guide.md  tactical-capabilities.md  tak-setup.md
docs/issues/: issue_0_vision_node.md  issue_10_web_dashboard_phase2.md  issue_1_arena_boundary_and_model.md  issue_2_robot_spawning_discovery.md  issue_3_unified_robot_control_api.md  issue_4_virtual_robot_simulation_node.md  issue_5_web_dashboard_phase1.md  issue_6_unified_robot_sensor_api.md  issue_7_exercise_team_management.md  issue_8_sensor_engine_range_sensors.md  issue_9_position_identification_sensors.md
firmware/: README.md
firmware/main/: main.c
hardware/: README.md
models/apc/: model.config  model.sdf
models/platopod/: model.config  model.sdf
models/recon/: model.config  model.sdf
models/tank/: model.config  model.sdf
server/: README.md  package.xml  setup.cfg  setup.py
server/config/: apriltag_settings.yaml
server/launch/: arena.launch.py  atak_test.launch.py  classroom.launch.py  cot_bridge.launch.py  engagement.launch.py  gateway.launch.py  gazebo.launch.py  los.launch.py  opfor.launch.py  registry.launch.py  (+7 more)
server/plato_pod_msgs/: CMakeLists.txt  package.xml
server/plato_pod_msgs/msg/: ArenaModel.msg  Civilian.msg  CivilianList.msg  CoverPolygon.msg  DeadZone.msg  DeadZoneList.msg  EngagementOutcome.msg  EwEmitter.msg  EwEmitterList.msg  FireIntent.msg  HomographyMatrix.msg  IedZone.msg  IedZoneList.msg  JammingZone.msg  JammingZoneList.msg  NavGoal.msg  Observation.msg  Obstacle.msg  RobotPose.msg  RobotPoses.msg  RobotStatus.msg  RobotStatusList.msg  RoeRules.msg  SensorReading.msg  TagDetections.msg  TagPose.msg  WeaponCatalog.msg  WeaponSpec.msg  WeatherState.msg  WorldCover.msg  Zone.msg
server/plato_pod_msgs/srv/: ApplyDamage.srv  EvaluateLos.srv  ListRobots.srv  RegisterPhysical.srv  RemoveRobot.srv  ResetRobot.srv  SpawnVirtual.srv
tools/: atak_clear.py  cot_viewer.py  run_demo.sh  smoke_test_lab.py  stop_demo.sh
web/: README.md
web/sdk/: pyproject.toml
web/sdk/examples/: keyboard_demo.py
web/sdk/examples/cadet/: README.md  plume_runtime.py  plume_search.py  test_solutions.py
web/sdk/examples/cadet/solutions/: band1_random_walk.py  band2_gradient_ascent.py  band3_roe_aware.py
web/sdk/platopod/: __init__.py  arena.py  keyboard.py
(+123 files in other folders)
