[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "platopod"
version = "0.1.0"
description = "Plato Pod Python SDK — control physical and virtual robots"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest"]
